--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,27 +1,34 @@
 <nav class="navbar navbar-light bg-light">
-  <div class="container">
+  <div class="container d-flex justify-content-between align-items-center">
+
     <%= link_to "Simple Airbnb", flats_path, class: "navbar-brand" %>
-    <form class="d-flex" action="<%= flats_path %>" method="get">
-      <input
-        class="form-control me-2"
-        type="search"
-        name="query"
-        placeholder="Search for flats"
-        aria-label="Search"
-        value="<%= params[:query] %>">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-    <a href="#" class="btn btn-primary ms-3">Add Flat</a>
+
+    <div class="d-flex align-items-center">
+      <form class="d-flex me-3" action="<%= flats_path %>" method="get">
+        <input
+          class="form-control me-2"
+          type="search"
+          name="query"
+          placeholder="Search for flats"
+          aria-label="Search"
+          value="<%= params[:query] %>">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+      <%= link_to "Add Flat", new_flat_path, class: "btn btn-primary" %>
+    </div>
   </div>
 </nav>
 
+
 <div class="container mt-5">
-  <h1 class="mb-4">All our Flats (<%= @flats.count %>)</h1>
+  <h1 class="mb-4">All our Flats</h1>
+  <p>All <%= @flats.count %> flats</p>
   <div class="row">
     <% @flats.each do |flat| %>
       <div class="col-md-4">
         <div class="card">
           <div class="card-body">
+            <img class="card-img-top" src="https://imgs.search.brave.com/ldkXCcMcXKeru5gPrYXcNxNhCiurh70UWIl9TXTZUnY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/cGhvdG9zLWdyYXR1/aXRlL2JlbGxlLW1h/aXNvbi1icmlxdWVz/LXJvdWdlcy1sdW1p/ZXJlcy1kZWNvcmF0/aXZlc181Mzg3Ni00/OTM3Mi5qcGc_c2Vt/dD1haXNfaHlicmlk" alt="maison">
             <h5 class="card-title"><%= flat.name %></h5>
             <p class="card-text">
               <%= flat.address %>
@@ -34,7 +41,9 @@
                 <i class="fas fa-euro-sign"></i> <%= flat.price_per_night %>
               </span>
             </div>
-            <a href="#" class="btn btn-link mt-2">More info</a>
+            <%= link_to 'More info', flat_path(flat), class: 'btn btn-link mt-2' %>
+            <a href="#" class="btn btn-link mt-2">Edit</a>
+            <a href="#" class="btn btn-link mt-2">Remove</a>
           </div>
         </div>
       </div>
